# Genie

./: CONTRIBUTING.md  LICENSE  NOTICE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  refactoring.md
genie/: .gitignore  .pnp.cjs  README.md  package.json  turbo.json
genie/apps/docs/: package.json
genie/apps/web/: package.json
genie/integrations/blockchain/svm/contract/: Anchor.toml  README.md  package.json
genie/integrations/blockchain/svm/contract/programs/genie/: Cargo.toml
genie/integrations/blockchain/svm/contract/programs/genie/src/: error.rs  lib.rs  utils.rs
genie/integrations/blockchain/svm/contract/programs/genie/src/instructions/: initialize_genie.rs  initialize_inbox.rs  initialize_profile.rs  mod.rs  register_inbox_owner.rs  send_token.rs  unregister_inbox_owner.rs
genie/integrations/blockchain/svm/contract/programs/genie/src/state/: genie.rs  inbox.rs  mod.rs  profile.rs
genie/integrations/blockchain/svm/ts/: package.json
genie/integrations/sns/discord/Genie-DiscordBot/: README.md  main.py  requirement.txt  test_success_rate.py  time_test.py
genie/server/backend/: .gitignore  README.md  manage.py  package.json  requirement.txt
genie/server/backend/accounts/: admin.py  models.py
genie/server/backend/backend/: errors.py  schema.py  settings.py  urls.py
genie/server/backend/blockchain/: admin.py  models.py
genie/server/backend/genie_backend/: manage.py
genie/server/backend/sns/: admin.py  apps.py  models.py
genie/server/backend/track/: admin.py  apps.py  models.py
(+67 files in other folders)
