[package]
name = "genie"
version = "0.1.0"
description = "Genie is a tool integration web2 platforms and blockchain networks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "genie"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ["init-if-needed"]}
anchor-spl = {version="0.29.0", features=["metadata"]}
solana-program = "<17.0.0"
